# image_processor_ami

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp  readme.md  unit_tests.cpp
image_processor/Filters/: Crop.cpp  EdgeDetection.cpp  Filters.h  FishEye.cpp  GaussianBlur.cpp  Grayscale.cpp  Negative.cpp  Sharpening.cpp
image_processor/Image/: Image.cpp  Image.h  RGB.cpp  RGB.h
image_processor/Tools/: Applier.cpp  Applier.h  FileHandler.cpp  FileHandler.h  Launcher.cpp  Launcher.h  Parser.cpp  Parser.h
